  * Remaining problem is that the pid of the second fork() for
    getting a controlling tty isn't that reported by spawn()
  * Re-enable writting utmp/wtmp for boot scripts
  * Provide a simply /etc/pam.d/init as without it will not work (sigh!)
  * Extend sulogin to support additional encryption algorithms
  * Re-enable maintenance message of sulogin

 -- Petter Reinholdtsen <pere@hungry.com>  Sun, 12 Jul 2009 19:58:10 +0200

sysvinit (2.87dsf) world; urgency=low

  * Fix typos and do minor updates in the manual pages.
  * Correct section of mountpoint(1).
  * Document -e and -t options for telinit in init(8).
  * Update address of FSF in the COPYRIGHT file.
  * Document in halt(8) that -n might not disable all syncing.
    Patch by Bill Nottingham and Fedora
  * Adjust output from "last -x".  In reboot lines, print endpoint
    of uptime too.  In shutdown lines print downtimes rather than
    the time between downs.  Fix typo in string compare in last.c.
    Patch by Thomas Hood.
  * Improve handling of IPv6 addresses in last.  Patch from Fedora.
  * Document last options in usage information, previously only
    mentioned in the manual page.
  * Add new option -F to last, to output full date string instead
    of the short form provided by default.  Patch from Olaf Dabrunz
    and SuSe.
  * Adjust build rules to make sure the installed binaries
    are stripped.
  * Increase the compiler warning level when building.
  * Fix utmp/wtmp updating on 64-bit platforms.  Patch by Bill
    Nottingham and Fedora.
  * Avoid unchecked return value from malloc() in utmpdump.
    Patch from Christian 'Dr. Disk' Hechelmann and Fedora.
  * Make sure to use execle and no execl when passing environment to
    the new process.  Patch from RedHat.
  * Correct init to make sure the waiting status is preserved across
    re-exec.  Patch from RedHat.
  * Correct init to avoid race condition when starting programs during
    boot.  Patch from SuSe.