@@ -77,6 +77,12 @@ sysvinit (2.88dsf) UNRELEASED; urgency=low
   * Provide a simply /etc/pam.d/init as without it will not work (sigh!)
   * Extend sulogin to support additional encryption algorithms
   * Re-enable maintenance message of sulogin
+  * Remove PAM session start part from init as sulogin do not use
+    and will not use a PAM conv() function.  The current sulogin
+    is able to handle DES as well as MD5, SHA, and Blowfish encrypted
+    passwords due using getpwnam(3).
+  * Enable the sulogin fallback password check to handle  MD5, SHA, and
+    Blowfish encrypted passwords in case of getpwnam(3) fails.
 
  -- Petter Reinholdtsen <pere@hungry.com>  Sun, 12 Jul 2009 19:58:10 +0200
 
